<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp">

    <ImageView
        android:id="@+id/coin_icon"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:src="@drawable/btc_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/coin_abb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc"
        android:textSize="18sp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintStart_toEndOf="@id/coin_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:textColor="@color/brand"
        />

    <TextView
        android:id="@+id/coin_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_name"
        android:textSize="13sp"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintStart_toEndOf="@id/coin_icon"
        app:layout_constraintTop_toBottomOf="@id/coin_abb"
        android:layout_marginStart="8dp"
        android:textColor="@color/brand_light"
        />

    <ImageView
        android:id="@+id/coin_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/coin_abb"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/negative"
        android:layout_marginStart="17dp"
        />

    <TextView
        android:id="@+id/coin_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_price"
        android:textSize="18sp"
        android:textColor="@color/brand"
        android:fontFamily="@font/inter_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/coin_delta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btc_delta"
        android:textSize="13sp"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/negative"
        app:layout_constraintTop_toBottomOf="@id/coin_price"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>